# GenericAgentRust

./: .gitignore  MIGRATION_STATUS.md  README.md  TODO_LIST.md  package-lock.json  package.json
src/: App.css  App.tsx  Chat.tsx  Settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: agent.rs  browser.rs  config.rs  lib.rs  llm.rs  memory.rs  tools.rs
src-tauri/src/: main.rs
