[package]
name = "ga_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
dirs = "6"
futures-util = "0.3"
headless_chrome = "1.0.21"
regex = "1"
reqwest = { version = "0.13", features = ["json", "stream"] }
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.44"
